--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     </header>
 <main class="homepage">
 
-    <section class="first line animate__animated animate__bounce">
+    <section class="first line">
         <div class="container">
             <h2 class="text-center">Latest Project</h2>
-            <div class="row top-slick">
+            <div class="row top-slick animate__animated animate__fadeIn" data-wow-delay="2s">
                 <div class="col-md-3">
                     <div class="card">
                         <div class="card__title">
