--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="card__image">
                             <div class="border_"></div>
                             <div class="layer"></div>
-                            <img src="assets/img/ppm.png" alt="">
+                            <img src="assets/img/ppm.PNG" alt="">
                             <a href="#" class="card__button" data-toggle="modal" data-target="#latestProject">See Website</a>
                         </div>
 
@@ -77,7 +77,7 @@
                         <div class="card__image">
                             <div class="border_"></div>
                             <div class="layer"></div>
-                            <img src="assets/img/visicom.png" alt="">
+                            <img src="assets/img/visicom.PNG" alt="">
                             <a href="#" class="card__button" data-toggle="modal" data-target="#latestProject">See Website</a>
                         </div>
 
@@ -92,7 +92,7 @@
                         <div class="card__image">
                             <div class="border_"></div>
                             <div class="layer"></div>
-                            <img src="assets/img/idprolike.png" alt="">
+                            <img src="assets/img/idprolike.PNG" alt="">
                             <a href="#" class="card__button" data-toggle="modal" data-target="#latestProject">See Website</a>
                         </div>
 
@@ -107,7 +107,7 @@
                         <div class="card__image">
                             <div class="border_"></div>
                             <div class="layer"></div>
-                            <img src="assets/img/kemenpar.png" alt="">
+                            <img src="assets/img/kemenpar.PNG" alt="">
                             <a href="#" class="card__button" data-toggle="modal" data-target="#latestProject">See Website</a>
                         </div>
 
