--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="modal-body__image">
-                                    <img src="assets/img/kemenpar.png" alt="">
+                                    <img src="assets/img/kemenpar.PNG" alt="">
                                 </div>
                             </div>
                         </div>
