--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Biaya</a>
+                            <a class="nav-link" href="projects.html">Projects</a>
                         </li>
                     </ul>
                     <!-- <form class="form-inline my-2 my-lg-0">
@@ -60,37 +60,7 @@
                             <div class="border_"></div>
                             <div class="layer"></div>
                             <img src="assets/img/ppm.PNG" alt="">
-                            <a href="#" class="card__button" data-toggle="modal" data-target="#latestProject">See Website</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <div class="card__title">
-                            Visicom
-                        </div>
-                        <div class="card__square"></div>
-                        <div class="card__image">
-                            <div class="border_"></div>
-                            <div class="layer"></div>
-                            <img src="assets/img/visicom.PNG" alt="">
-                            <a href="#" class="card__button" data-toggle="modal" data-target="#latestProject">See Website</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <div class="card__title">
-                            ID Prolike
-                        </div>
-                        <div class="card__square"></div>
-                        <div class="card__image">
-                            <div class="border_"></div>
-                            <div class="layer"></div>
-                            <img src="assets/img/idprolike.PNG" alt="">
-                            <a href="#" class="card__button" data-toggle="modal" data-target="#latestProject">See Website</a>
+                            <a href="http://ppmbyaugust.com/" target="_blank" class="card__button">See Website</a>
                         </div>
 
                     </div>
@@ -105,12 +75,51 @@
                             <div class="border_"></div>
                             <div class="layer"></div>
                             <img src="assets/img/kemenpar.PNG" alt="">
-                            <a href="#" class="card__button" data-toggle="modal" data-target="#latestProject">See Website</a>
+                            <a href="https://dediwibisono17.github.io/kemenpar/" target="_blank" class="card__button">See Website</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card__title">
+                            Visicom
+                        </div>
+                        <div class="card__square"></div>
+                        <div class="card__image">
+                            <div class="border_"></div>
+                            <div class="layer"></div>
+                            <img src="assets/img/visicom.PNG" alt="">
+                            <a href="http://visicom.co.id/" target="_blank" class="card__button">See Website</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card__title">
+                            ID Prolike
+                        </div>
+                        <div class="card__square"></div>
+                        <div class="card__image">
+                            <div class="border_"></div>
+                            <div class="layer"></div>
+                            <img src="assets/img/idprolike.PNG" alt="">
+                            <a href="http://idprolike.com/" target="_blank" class="card__button">See Website</a>
                         </div>
 
                     </div>
                 </div>
             </div>
+            <br>
+            <a href="projects.html">
+                <div class="button-nice">
+                    <div class="check text-center">See All Projects</div>
+                    <div class="check fafa">
+                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    </div>
+                </div>
+            </a>
         </div>
     </section>
 
@@ -282,6 +291,7 @@
     </div>
 
     <section class="contact-us">
+    <div class="swing"></div>
     <div class="container">
         <div class="my-3">
             <h4>Ada Pertanyaan?</h4>
