--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,16 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        Kemenparkraf
+                        <div class="card__img">
+                            <img src="assets/img/logo-kemenpar.png" alt="" width="60" height="60">
+                        </div>
+                        <div class="details">
+                            <div class="details__title">Kemenparkraf History</div>
+                            <div class="details__price">3-5jt</div>
+                        </div>
+                        <div class="see" data-toggle="modal" data-target="#exampleModalCenter2">
+                            <i class="fa fa-plus" aria-hidden="true"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -113,6 +122,46 @@
             </div>
             <div class="modal-footer">
                 <a href="https://ppmbyaugust.com/en/">
+                    <div class="button-nice">
+                        <div class="check">Check Website</div>
+                        <div class="check fafa">
+                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </a>
+                <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade projects-modal" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle2" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">PPM by August</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+            </div>
+            <div class="modal-body">
+                <div class="all">
+                    <div class="img">
+                        <img src="assets/img/kemen1.PNG" alt="">
+                    </div>
+                    <div class="img">
+                        <img src="assets/img/kemen2.PNG" alt="">
+                    </div>
+                    <div class="img">
+                        <img src="assets/img/kemen3.PNG" alt="">
+                    </div>
+                </div>
+                <h3>Fitur</h3>
+                <p>Landing Page yang berisikan sejarah-sejarah dari Kementerian Pariwisata. Data statis yang langsung di edit dalam source code nya. Asset-asset dan animasi mengikuti dari UI UX yang telah disiapkan</p>
+                
+            </div>
+            <div class="modal-footer">
+                <a href="https://dediwibisono17.github.io/kemenpar/">
                     <div class="button-nice">
                         <div class="check">Check Website</div>
                         <div class="check fafa">
