--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lato&family=Quicksand:wght@600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <title>Front End Starterpack</title>
+        <title>Digital Mint | Project Website Sesuai dengan Impianmu</title>
 </head>
 
 <body>
@@ -33,32 +33,84 @@
                             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Biaya</a>
+                            <a class="nav-link" href="projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Disabled</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
+                    <!-- <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </nav>
     </header>
-<main>
+<main class="about-us">
   <div class="container">
-    <h1>Welcome To New Front End Starterpack Using Gulp 4</h1>
-    <div id="Test"></div>
-    <div id="Test2"></div>
-    <div class="test">Test class</div>
+    <h2 class="text-center mt-3">About Us</h2>
+    <div class="my-3">
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam neque molestias nesciunt recusandae consequatur quos cum veniam minima autem perferendis eveniet nulla placeat soluta obcaecati iste magnam, quidem, natus pariatur!. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi sit voluptate ipsam cumque, quam ad, suscipit, asperiores cum sunt aliquam nam modi? Soluta deleniti, enim iste fugit omnis vero magnam?</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat in voluptates expedita, laboriosam qui laborum vero sed fuga aliquam vel deserunt commodi culpa eligendi distinctio, rem labore quasi, vitae quis!</p>
+    </div>
+    <h2 class="text-center mt-5">Team</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="ab-card">
+          <div class="bg-line"></div>
+          <div class="ab-card__img">
+            <img src="assets/img/programmer.png" alt="">
+          </div>
+          <div class="ab-card__name">
+            Dedi Wibisono
+          </div>
+          <div class="ab-card__title">
+            Frontend Developer
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="ab-card">
+          <div class="bg-line"></div>
+          <div class="ab-card__img">
+            <img src="assets/img/programmer_2.png" alt="">
+          </div>
+          <div class="ab-card__name">
+            Elham Budianto
+          </div>
+          <div class="ab-card__title">
+            Backend Developer
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
   </div>
 </main>
 
 
-<footer class="container">
-    dedi
+<footer>
+    <div class="container">
+        <!-- <div class="row py-5">
+            <div class="col-md-6">
+                <h1>Digital Mint</h1>
+            </div>
+            <div class="col-md-6">
+                <h3>Teams</h3>
+            </div>
+        </div> -->
+        <div class="text-center">
+            <a href="team.html">Team</a>
+            <a href="howto.html">How to Book</a>
+            <a href="project.html">Project</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="privacy.html">Privacy and Policy</a>
+            <div class="mt-4">
+                &copy; 2020 Digital Mint
+            </div>
+        </div>
+    </div>
 </footer>
 
   <script src="assets/js/vendor/jquery.min.js"></script>
