--- a/about.html
+++ b/about.html
@@ -68,6 +68,12 @@
           <div class="ab-card__title">
             Frontend Developer
           </div>
+          <div class="ab-card__linkedin">
+          	<a href="https://www.linkedin.com/in/dedi-wibisono-a06400100/">
+              <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              <!-- alalall -->
+          	</a>
+          </div>
         </div>
       </div>
       <div class="col-md-4">
@@ -81,6 +87,12 @@
           </div>
           <div class="ab-card__title">
             Backend Developer
+          </div>
+          <div class="ab-card__linkedin">
+          	<a href="https://www.linkedin.com/in/elham-budianto-953b6716b/">
+              <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              <!-- alalall -->
+          	</a>
           </div>
         </div>
       </div>
