--- a/about.html
+++ b/about.html
@@ -63,6 +63,26 @@
             <img src="assets/img/programmer.png" alt="">
           </div>
           <div class="ab-card__name">
+            Nugraha Yuda
+          </div>
+          <div class="ab-card__title">
+            Project Manager, Android Developer
+          </div>
+          <div class="ab-card__linkedin">
+          	<a href="https://www.linkedin.com/in/nugraha-yuda-perdana-7480b251/">
+              <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              <!-- alalall -->
+          	</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="ab-card">
+          <div class="bg-line"></div>
+          <div class="ab-card__img">
+            <img src="assets/img/programmer.png" alt="">
+          </div>
+          <div class="ab-card__name">
             Dedi Wibisono
           </div>
           <div class="ab-card__title">
@@ -90,6 +110,26 @@
           </div>
           <div class="ab-card__linkedin">
           	<a href="https://www.linkedin.com/in/elham-budianto-953b6716b/">
+              <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              <!-- alalall -->
+          	</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="ab-card">
+          <div class="bg-line"></div>
+          <div class="ab-card__img">
+            <img src="assets/img/programmer_2.png" alt="">
+          </div>
+          <div class="ab-card__name">
+            Elan Setiawan
+          </div>
+          <div class="ab-card__title">
+            Fullstack Developer
+          </div>
+          <div class="ab-card__linkedin">
+          	<a href="https://www.linkedin.com/in/elan-setiawan-767144104/">
               <i class="fa fa-linkedin-square" aria-hidden="true"></i>
               <!-- alalall -->
           	</a>
