--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="projects.html">Projects</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
                     </ul>
                     <!-- <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -57,7 +60,7 @@
                         </div>
                         <div class="details">
                             <div class="details__title">PPM by August</div>
-                            <div class="details__price">10-20jt</div>
+                            <!-- <div class="details__price">10-20jt</div> -->
                         </div>
                         <div class="see" data-toggle="modal" data-target="#exampleModalCenter">
                             <i class="fa fa-plus" aria-hidden="true"></i>
@@ -71,7 +74,7 @@
                         </div>
                         <div class="details">
                             <div class="details__title">Kemenparkraf History</div>
-                            <div class="details__price">3-5jt</div>
+                            <!-- <div class="details__price">3-5jt</div> -->
                         </div>
                         <div class="see" data-toggle="modal" data-target="#exampleModalCenter2">
                             <i class="fa fa-plus" aria-hidden="true"></i>
@@ -139,7 +142,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">PPM by August</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">Kementerian Pariwisata dan Kreatif</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
