--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     </div>
     <h2 class="text-center mt-5">Team</h2>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="ab-card">
           <div class="bg-line"></div>
           <div class="ab-card__img">
@@ -66,7 +66,7 @@
             Nugraha Yuda
           </div>
           <div class="ab-card__title">
-            Project Manager, Android Developer
+            Project Manager
           </div>
           <div class="ab-card__linkedin">
           	<a href="https://www.linkedin.com/in/nugraha-yuda-perdana-7480b251/">
@@ -76,7 +76,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="ab-card">
           <div class="bg-line"></div>
           <div class="ab-card__img">
@@ -96,7 +96,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="ab-card">
           <div class="bg-line"></div>
           <div class="ab-card__img">
@@ -116,7 +116,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="ab-card">
           <div class="bg-line"></div>
           <div class="ab-card__img">
